--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ APP_KEY=SomeRandomString
 
 DB_HOST=localhost
 DB_DATABASE=laravel_base
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=dev
+DB_PASSWORD=K7Ro0JNko
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
